Added ws server and client (POC)

--- a/src/main/webapp/ws.html
+++ b/src/main/webapp/ws.html
@@ -17,11 +17,13 @@
         <p id="examples">e.g. try 'hi', 'name', 'age', 'today'</p>
 
         <input id="text" type="text"/>
-        <button id="disconnect">Disconnect</button>
+        <button id="send-button">Send</button>
 
     </div>
     <!-- #container -->
 
 </div>
+<script src="script/vendor/jquery.min.js"></script>
+<script src="script/communication.js"></script>
 </body>
 </html>
