--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,6 +24,7 @@ implemented by Adelino Lobão
 		<script src="script/sprite.js"></script>
 		<script src="script/laser.js"></script>
 		<script src="script/player.js"></script>
+        <script src="script/communication.js"></script>
 		<script src="script/game.js"></script>
 	</body>
 </html>
