Added keyboard input

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="viewport" content="width=device-width" />
     <title>Multivaders remote</title>
     <link rel="stylesheet" href="/style/remote.css"/>
     <style type="text/css">
         body {
             background-color: #234;
+
         }
 
         .button {
-            font-size: 6em;
+            font-size: 4em;
             color: white;
             padding: 0.5em 0.75em;
-            margin: 1.5em 0.1em;
+            margin: 0.5em 0.1em;
             font-weight: bold;
             font-family: sans-serif;
             border-radius: 0.4em;
@@ -34,8 +38,8 @@
 <body>
 <div class="remote">
     <button class="button left" id="left">&lt;</button>
-    <button class="button left" id="right">&gt;</button>
-    <button class="button right" id="shoot">X</button>
+    <button  class="button left" id="right">&gt;</button>
+    <button  class="button right" id="shoot">X</button>
 </div>
 <script src="script/vendor/jquery.min.js"></script>
 <script src="script/communication.js"></script>
