--- a/src/main/webapp/screen.html
+++ b/src/main/webapp/screen.html
@@ -8,6 +8,7 @@
 		<header>
 			<img src="style/images/logo.gif" />
 		</header>
+        <p class="qr-code"></p>
 		<section id="controls">Z (Left) - X (Right) - SPACE (Shoot)</section>
 		<canvas id="content"></canvas>
 		<section id="info">
@@ -20,6 +21,9 @@
 		<script src="script/laser.js"></script>
 		<script src="script/player.js"></script>
         <script src="script/communication.js"></script>
-		<script src="script/game.js"></script>
-	</body>
+        <script src="script/game.js"></script>
+        <script src="script/vendor/jquery.min.js"></script>
+        <script src="script/vendor/jquery.qrcode.min.js"></script>
+        <script src="script/qrcode.js"></script>
+    </body>
 </html>
